2005-12-15  Laurent Sansonetti  <lrz@gnome.org>

	* TODO,
	  data/alexandria/ui/menus.xml,
	  lib/alexandria.rb,
	  lib/alexandria/book.rb,
	  lib/alexandria/library.rb,
	  lib/alexandria/undo_manager.rb,
	  lib/alexandria/ui/main_app.rb,
	  lib/alexandria/ui/new_book_dialog_manual.rb:

	- Introduced Undo/Redo functionality for move and deletion actions ;
	- Added some various very small improvements.

2005-12-09  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/glade/book_properties_dialog.glade,
	  lib/alexandria/ui/book_properties_dialog_base.rb:

	- Added a clear button just before the cover that set the default book
	  icon back ;
	- Added some tooltips to add/remove authors, clear cover and change cover
	  buttons.

	* lib/alexandria/ui/book_properties_dialog.rb:

	Make sure we never set the ISBN entry to nil if the book is ISBN-less.

	* lib/alexandria/ui/main_app.rb:

	- Renamed 'Set Rating' to 'My rating' ;
	- Reworded rating 1..5 menu items.

2005-12-07  Laurent Sansonetti  <lrz@gnome.org>

	* data/alexandria/ui/menus.xml,
	  data/alexandria/ui/popups.xml,
	  lib/alexandria/ui/main_app.rb:

	- Added contextual popup and Edit menu actions to set the rating of the
	  selected books ;
	- When right clicking on the books view, select the item/row if the mouse
	  if on an item/row.

	* lib/alexandria/book.rb:

	Simplify the code.

	* data/alexandria/ui/popups.xml,
	  lib/alexandria/ui/main_app.rb:

	When right clicking in the libraries view, if the mouse is not on an item
	show another popup menu with New Library and New Smart Library actions.

	* data/alexandria/glade/preferences_dialog.glade,
	  lib/alexandria/ui/preferences_dialog.rb:
	
	Set the providers tree view as reorderable with drag-and-drop.

	* lib/alexandria/ui/main_app.rb:

	- Work around the beginning of a drag when running a dialog within the
	  GtkIconView's item-activated or GtkTreeView's row-activated signal
	  handlers ;